--- a/index.html
+++ b/index.html
@@ -24,14 +24,76 @@
                     <h5>
                         Palm Trees
                         <div class="subtitle">Flatbush Zombies</div>
-                        <i class="bi playlistPlay bi-play-circle-fill" id="1"></i>
                     </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="4"></i>
+                </li>
+                <li class="songItem">
+                    <span>02</span>
+                    <img src="img/1.jpg" alt="Flatbush">
+                    <h5>
+                        Palm Trees
+                        <div class="subtitle">Flatbush Zombies</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="4"></i>
+                </li>
+                <li class="songItem">
+                    <span>03</span>
+                    <img src="img/1.jpg" alt="Flatbush">
+                    <h5>
+                        Palm Trees
+                        <div class="subtitle">Flatbush Zombies</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="4"></i>
+                </li>
+                <li class="songItem">
+                    <span>04</span>
+                    <img src="img/1.jpg" alt="Flatbush">
+                    <h5>
+                        Palm Trees
+                        <div class="subtitle">Flatbush Zombies</div>
+                    </h5>
+                        <i class="bi playlistPlay bi-play-circle-fill" id="4"></i>
+
+                </li>
+                <li class="songItem">
+                    <span>05</span>
+                    <img src="img/1.jpg" alt="Flatbush">
+                    <h5>
+                        Palm Trees
+                        <div class="subtitle">Flatbush Zombies</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="5"></i>
                 </li>
             </div>
         </div>
-        <div class="song_side"></div>
-        <div class="master_play"></div>
 
+
+        <div class="song_side"></div>
+        <div class="master_play">
+            <div class="wave">
+                <div class="wave1"></div>
+                <div class="wave1"></div>
+                <div class="wave1"></div>
+            </div>
+            <img src="img/1.jpg" alt="Flatbush Zombies">
+            <h5>Palm Trees <br>
+                <div class="subtitle">Flatbush Zombies</div>
+            </h5>
+            <div class="icon">
+                <i class="bi bi-skip-start-fill"></i>
+                <i class="bi bi-play-fill"></i>
+                <i class="bi bi-skip-end-fill"></i>
+                
+            </div>
+            <span id="currentStart">0.00</span>
+            <div class="bar">
+                <input type="range" name="seek" min="0" value="0" max="100">
+                <div class="bar2" id="bar2"></div>
+                <div class="dot"></div>
+            </div>
+            <span id="currentEnd">0.00</span>
+        </div>
+        
 
     </header>
 
