finish song side menu, and begin js

--- a/index.html
+++ b/index.html
@@ -25,42 +25,42 @@
                         Palm Trees
                         <div class="subtitle">Flatbush Zombies</div>
                     </h5>
-                    <i class="bi playlistPlay bi-play-circle-fill" id="4"></i>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="1"></i>
                 </li>
                 <li class="songItem">
                     <span>02</span>
-                    <img src="img/1.jpg" alt="Flatbush">
+                    <img src="img/2.jpg" alt="Drake">
                     <h5>
-                        Palm Trees
-                        <div class="subtitle">Flatbush Zombies</div>
+                        Laugh Now Cry Later
+                        <div class="subtitle">Drake</div>
                     </h5>
-                    <i class="bi playlistPlay bi-play-circle-fill" id="4"></i>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
                 </li>
                 <li class="songItem">
                     <span>03</span>
-                    <img src="img/1.jpg" alt="Flatbush">
+                    <img src="img/3.jpg" alt="Justin Bieber">
                     <h5>
                         Palm Trees
-                        <div class="subtitle">Flatbush Zombies</div>
+                        <div class="subtitle">Justin Bieber</div>
                     </h5>
-                    <i class="bi playlistPlay bi-play-circle-fill" id="4"></i>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="3"></i>
                 </li>
                 <li class="songItem">
                     <span>04</span>
-                    <img src="img/1.jpg" alt="Flatbush">
+                    <img src="img/4.jpg" alt="Mariah Carey">
                     <h5>
                         Palm Trees
-                        <div class="subtitle">Flatbush Zombies</div>
+                        <div class="subtitle">Mariah Carey</div>
                     </h5>
                         <i class="bi playlistPlay bi-play-circle-fill" id="4"></i>
 
                 </li>
                 <li class="songItem">
                     <span>05</span>
-                    <img src="img/1.jpg" alt="Flatbush">
+                    <img src="img/5.jpg" alt="Future">
                     <h5>
                         Palm Trees
-                        <div class="subtitle">Flatbush Zombies</div>
+                        <div class="subtitle">Future</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="5"></i>
                 </li>
@@ -104,11 +104,131 @@
                 </div>
                 <div class="pop_song">
                     <li class="songItem">
-                        <div class="img_play"></div>
+                        <div class="img_play">
+                            <img src="img/1.jpg" alt="Flatbush Zombies">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="6"></i>
+                        </div>
+                        <h5>
+                            Palm Trees <br>
+                            <div class="subtitle">Flatbush Zombies</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img_play">
+                            <img src="img/1.jpg" alt="Flatbush Zombies">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="7"></i>
+
+                        </div>
+                        <h5>
+                            Palm Trees <br>
+                            <div class="subtitle">Flatbush Zombies</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img_play">
+                            <img src="img/1.jpg" alt="Flatbush Zombies">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="8"></i>
+                        </div>
+                        <h5>
+                            Palm Trees <br>
+                            <div class="subtitle">Flatbush Zombies</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img_play">
+                            <img src="img/1.jpg" alt="Flatbush Zombies">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="9"></i>
+                        </div>
+                        <h5>
+                            Palm Trees <br>
+                            <div class="subtitle">Flatbush Zombies</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img_play">
+                            <img src="img/1.jpg" alt="Flatbush Zombies">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="10"></i>
+                        </div>
+                        <h5>
+                            Palm Trees <br>
+                            <div class="subtitle">Flatbush Zombies</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img_play">
+                            <img src="img/1.jpg" alt="Flatbush Zombies">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="11"></i>
+                        </div>
+                        <h5>
+                            Palm Trees <br>
+                            <div class="subtitle">Flatbush Zombies</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img_play">
+                            <img src="img/1.jpg" alt="Flatbush Zombies">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="12"></i>
+                        </div>
+                        <h5>
+                            Palm Trees <br>
+                            <div class="subtitle">Flatbush Zombies</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img_play">
+                            <img src="img/1.jpg" alt="Flatbush Zombies">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="13"></i>
+                        </div>
+                        <h5>
+                            Palm Trees <br>
+                            <div class="subtitle">Flatbush Zombies</div>
+                        </h5>
                     </li>
                 </div>
             </div>
-            
+            <div class="popular_artist">
+                <div class="h4">
+                    <h4>Popular Artists</h4>
+                    <div class="btn_s">
+                        <i id="left_scrolls" class="bi bi-arrow-left-short"></i>
+                        <i id="right_scrolls" class="bi bi-arrow-right-short"></i>
+                    </div>
+                </div>
+                <div class="item">
+                    <li>
+                        <img src="img/2.jpg" alt="Drake" title="Drake">
+                    </li>
+                    <li>
+                        <img src="img/3.jpg" alt="Justin Bieber" title="Justin Bieber">
+                    </li>
+                    <li>
+                        <img src="img/4.jpg" alt="Mariah Carey" title="Mariah Carey">
+                    </li>
+                    <li>
+                        <img src="img/5.jpg" alt="Future" title="Future">
+                    </li>
+                    <li>
+                        <img src="img/6.jpg" alt="Kanye West" title="Kanye West">
+                    </li>
+                    <li>
+                        <img src="img/7.jpg" alt="Kendrick Lamar" title="Kendrick Lamar">
+                    </li>
+                    <li>
+                        <img src="img/8.jpg" alt="Ludacris" title="Ludacris">
+                    </li>
+                    <li>
+                        <img src="img/9.jpg" alt="Eminem" title="Eminem">
+                    </li>
+                    <li>
+                        <img src="img/10.jpg" alt="Pop Smoke" title="Pop Smoke">
+                    </li>
+                    <li>
+                        <img src="img/11.jpg" alt="Snoop Dogg" title="Snoop Dogg">
+                    </li>
+                    
+
+                    <!-- CHNAGE ALL IMG -->
+                </div>
 
         </div>
         <div class="master_play">
